--- a/src/Pages/Components/Header.css
+++ b/src/Pages/Components/Header.css
@@ -66,7 +66,8 @@
 .div-sair-nologin {
   cursor: pointer;
   justify-content: flex-end;
-  width: 79vw;
+  width: 80vw;
+  margin-right: 1em;
   display: flex;
   flex-direction: row;
   position: relative;
@@ -89,6 +90,8 @@
   .main-div-user {
     position: absolute;
     left: 35%;
+    top: 0;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     width: auto;
