--- a/src/Pages/Components/MenuSuperior.css
+++ b/src/Pages/Components/MenuSuperior.css
@@ -14,6 +14,7 @@
   transition: 0.5s;
 }
 .main-div-menu {
+  font-family: NotoSans-Regular;
   z-index: 999;
   position: absolute;
   display: grid;
@@ -129,21 +130,22 @@
   .span-buttons {
     display: flex;
   }
+  .span-buttons button {
+    margin: 0;
+  }
   .main-div-menu {
     top: 0;
     display: grid;
     grid-template-columns: 1fr;
-    grid-auto-rows: max-content;
     transition: 0.5s;
     z-index: 999;
     height: auto;
   }
-
   .main-div-dados-menu {
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: auto;
   }
   .main-div-dados-menu ul {
     display: flex;
