--- a/src/Pages/Conta.css
+++ b/src/Pages/Conta.css
@@ -6,7 +6,7 @@
 }
 .div-context {
   overflow-y: auto;
-  max-height: 89.9vh;
+  min-height: 100vh;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
@@ -14,7 +14,7 @@
     grid-template-columns: 0% 100%;
   }
   .div-context {
-    max-height: 100vh;
+    min-height: 100vh;
   }
 }
 @media only screen and (min-width: 1025px) and (max-width: 1140px) {
@@ -22,7 +22,7 @@
     grid-template-columns: 25% 75%;
   }
   .div-context {
-    max-height: 100vh;
+    min-height: 100vh;
   }
 }
 
@@ -31,6 +31,6 @@
     grid-template-columns: 22% 78%;
   }
   .div-context {
-    max-height: 100vh;
+    min-height: 100vh;
   }
 }
