--- a/src/Pages/NotFound.css
+++ b/src/Pages/NotFound.css
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   align-self: center;
   align-items: center;
   align-content: center;
