--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+  width: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,23 +12,20 @@ body {
 }
 
 code {
+  margin: 0;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace, 'NotoSans-Regular', 'NotoSans-Bold';
 }
 
 @font-face {
+  margin: 0;
   font-family: 'NotoSans-Regular';
   src: local('NotoSans'), url('./fonts/NotoSans-Regular.ttf') format('truetype');
   font-weight: normal;
 }
 @font-face {
+  margin: 0;
   font-family: 'NotoSans-Bold';
   src: local('NotoSans'), url('./fonts/NotoSans-Bold.ttf') format('truetype');
   font-weight: bold;
-}
-.active {
-  text-decoration: underline;
-}
-li {
-  list-style-type: none;
 }
