--- a/src/Pages/Conta/Perfil.css
+++ b/src/Pages/Conta/Perfil.css
@@ -1,10 +1,11 @@
 .div-main-perfil {
-  padding: 3em;
-  position: relative;
-  margin-top: 8vh;
+  top: 0;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   animation-name: pageview;
   animation-duration: 400ms;
+  margin: 5%;
+  height: 100%;
+  justify-content: center;
 }
