--- a/src/Pages/Conta/Status.css
+++ b/src/Pages/Conta/Status.css
@@ -1,10 +1,9 @@
 .div-main-status {
-  padding: 3em;
   position: relative;
-  margin-top: 8vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   animation-name: pageview;
   animation-duration: 400ms;
+  height: auto;
+  width: 100%;
 }
