--- a/src/Pages/Shared/SwitchButton.css
+++ b/src/Pages/Shared/SwitchButton.css
@@ -49,7 +49,7 @@ input:checked+.span-slider:before {
 }
 
 .div-switch-main {
-    margin-top: 3%;
+    margin-top: 10px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -74,7 +74,8 @@ input:checked+.span-slider:before {
     align-items: center;
     justify-content: center;
     width: 50%;
-    opacity: 50%;
+    color: #E1E1E1;
+   
 }
 
 .spanMoveIt {
