--- a/src/Application/Pages/Main/Login.css
+++ b/src/Application/Pages/Main/Login.css
@@ -74,6 +74,7 @@
     width: 11%;
     height: 100%;
     align-self: flex-end;
+    justify-content: flex-end;
 }
 
 @media only screen and (max-width: 1024px) {
