--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -3,14 +3,30 @@
   font-size: 1em;
   font-family: NotoSans-Regular;
 }
-.p-input {
-  right: 5vw;
-  color: red;
+
+.p-error-null {
   position: absolute;
+  z-index: 0;
+  width: 0;
+  height: 0;
+  opacity: 0;
 }
 
-.input:hover,
-.input:focus {
+.p-input {
+  padding: 1%;
+  font-size: 13px;
+  position: absolute;
+  transition: 300ms;
+  color: #ffff;
+  background-color: #E20000;
+  border-radius: 10px 10px 10px 0px;
+  box-shadow: 10px 10px 10px 0px #E1E1E1;
+  width: 400px;
+  height: auto;
+  z-index: 99;
+}
+
+.input:hover, .input:focus {
   outline: none;
   border-color: #25b099;
   background: #fff;
@@ -29,11 +45,22 @@
   margin-top: 1em;
   color: #474747;
 }
+
 .input-div {
   display: flex;
   flex-direction: column;
 }
+
 .input-div label {
   margin-top: 1em;
   text-align: left;
+}
+
+@media only screen and (max-width:1024px) {
+  .p-input {
+    position: absolute;
+    right: 0%;
+    width: 80%;
+    z-index: 99;
+  }
 }
