--- a/src/Application/Pages/Main/Conta.css
+++ b/src/Application/Pages/Main/Conta.css
@@ -8,6 +8,9 @@
   overflow-y: auto;
   /* min-height: 80vh; */
 }
+.div-menu{
+  height: 100%;
+}
 
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
   .main-conta {
