--- a/src/Application/Pages/Account/AdicionarUsuarios.css
+++ b/src/Application/Pages/Account/AdicionarUsuarios.css
@@ -16,7 +16,8 @@
 .div-sub-add-new-user-input-area{
 
   display: grid;
-  grid-template-columns:  1fr 1fr 1fr 1fr;
+  grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr ;
   gap: 2%;
   margin: 0 auto;
 
@@ -26,11 +27,27 @@
   margin-top: 5%;
 }
 
-.NAME-FIELD-CLASS {grid-area: 1/1/1/4;}
-.USER-FIELD-CLASS{grid-area: 1/4/1/5;}
-.CONFIRMEMAIL-FIELD-CLASS{grid-area: 2/3/2/5;}
-.EMAIL-FIELD-CLASS{  grid-area: 2/1/2/3;}
-.PASSWORD-FIELD-CLASS{grid-area: 3/1/3/3;}
-.CONFIRMPASSWORD-FIELD-CLASS {grid-area: 3/3/3/5;}
-.DEPARTMENT-FIELD-CLASS {grid-area: 4/1/4/3;}
+.NAME-FIELD-CLASS {grid-area: 1/1/1/5;}
+.USER-FIELD-CLASS{grid-area: 1/5/1/7;}
 
+.DEPARTMENT-FIELD-CLASS {grid-area: 2/5/2/7;} 
+
+.TELPHONE-FIELD-CLASS{grid-area: 2/1/2/3;}
+.CELPHONE-FIELD-CLASS{grid-area: 2/3/2/5;}
+
+.PASSWORD-FIELD-CLASS{grid-area: 3/1/3/4;}
+.CONFIRMPASSWORD-FIELD-CLASS {grid-area: 3/4/3/7;}
+
+.EMAIL-FIELD-CLASS{grid-area: 4/1/4/4;}
+.CONFIRMEMAIL-FIELD-CLASS{grid-area: 4/4/4/7;}
+
+@media only screen and (max-width: 1024px) {
+
+  .div-sub-add-new-user-input-area{
+
+    display: flex;
+    flex-direction: column;
+  }
+
+
+}
