--- a/src/Application/Pages/Account/AdicionarUsuarios.css
+++ b/src/Application/Pages/Account/AdicionarUsuarios.css
@@ -7,47 +7,111 @@
   overflow-x: hidden;
 }
 
-.form-add-new-user{
+.form-add-new-user {
   width: 96%;
   margin: 0 auto;
   padding-top: 3%;
 }
 
-.div-sub-add-new-user-input-area{
-
+.div-sub-add-new-user-input-area {
   display: grid;
-  grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 2%;
   margin: 0 auto;
-
 }
 
-.div-sub-add-new-user-functions-area{
+.div-sub-add-new-user-functions-area {
   margin-top: 5%;
 }
 
-.NAME-FIELD-CLASS {grid-area: 1/1/1/5;}
-.USER-FIELD-CLASS{grid-area: 1/5/1/7;}
+.div-sub-add-new-user-checkbox-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 8vw;
+  background-color: #ffff;
+  border-radius: 15px;
+  gap: 3%;
+}
 
-.DEPARTMENT-FIELD-CLASS {grid-area: 2/5/2/7;} 
+/* CONTAINER PERSONALIZADO  CHECKBOX */
 
-.TELPHONE-FIELD-CLASS{grid-area: 2/1/2/3;}
-.CELPHONE-FIELD-CLASS{grid-area: 2/3/2/5;}
+.GENERAL-CHECKBOX-CLASS {
+  cursor: pointer;
+  transition: 200ms;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background-color: #f1f1f1;
+  color: #25b099;
+  align-items: center;
+  justify-content: center;
+}
 
-.PASSWORD-FIELD-CLASS{grid-area: 3/1/3/4;}
-.CONFIRMPASSWORD-FIELD-CLASS {grid-area: 3/4/3/7;}
+.GENERAL-CHECKBOX-CLASS:hover {
+  cursor: pointer;
+  color: #ffff;
+  transition: 200ms;
+  background-color: #25b099;
+}
 
-.EMAIL-FIELD-CLASS{grid-area: 4/1/4/4;}
-.CONFIRMEMAIL-FIELD-CLASS{grid-area: 4/4/4/7;}
+.GENERAL-CHECKBOX-CLASS input {
+  cursor: pointer;
+  opacity: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  z-index: 0;
+}
+
+.GENERAL-CHECKBOX-CLASS label {
+  cursor: pointer;
+  margin: 0;
+  position: absolute;
+}
 
 @media only screen and (max-width: 1024px) {
-
-  .div-sub-add-new-user-input-area{
-
+  .div-sub-add-new-user-input-area {
     display: flex;
     flex-direction: column;
   }
+}
 
+/* CONTAINER PERSONALIZADO  */
 
+.NAME-FIELD-CLASS {
+  grid-area: 1/1/1/5;
+}
+
+.USER-FIELD-CLASS {
+  grid-area: 1/5/1/7;
+}
+
+.DEPARTMENT-FIELD-CLASS {
+  grid-area: 2/5/2/7;
+}
+
+.TELPHONE-FIELD-CLASS {
+  grid-area: 2/1/2/3;
+}
+
+.CELPHONE-FIELD-CLASS {
+  grid-area: 2/3/2/5;
+}
+
+.PASSWORD-FIELD-CLASS {
+  grid-area: 3/1/3/4;
+}
+
+.CONFIRMPASSWORD-FIELD-CLASS {
+  grid-area: 3/4/3/7;
+}
+
+.EMAIL-FIELD-CLASS {
+  grid-area: 4/1/4/4;
+}
+
+.CONFIRMEMAIL-FIELD-CLASS {
+  grid-area: 4/4/4/7;
 }
