--- a/src/Application/Pages/Account/AdicionarUsuarios.css
+++ b/src/Application/Pages/Account/AdicionarUsuarios.css
@@ -13,6 +13,11 @@
   padding-top: 3%;
 }
 
+.form-add-new-user button {
+  width: 100%;
+  margin: 3% auto;
+}
+
 .div-sub-add-new-user-input-area {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -27,71 +32,88 @@
 
 .div-sub-add-new-user-checkbox-area {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 8vw;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: auto;
+  height: max-content;
   background-color: #ffff;
   border-radius: 15px;
-  gap: 3%;
+  gap: 20px;
 }
 
 /* CONTAINER PERSONALIZADO  CHECKBOX */
 
 .GENERAL-CHECKBOX-CLASS {
-  cursor: pointer;
-  transition: 200ms;
-  width: 100%;
-  height: 100%;
-  border-radius: 15px;
-  background-color: #f1f1f1;
-  color: #25b099;
-  align-items: center;
-  justify-content: center;
-}
-
-.GENERAL-CHECKBOX-CLASS:hover,
-.GENERAL-CHECKBOX-CLASS-actived:hover {
-  cursor: pointer;
-  color: #ffff;
-  transition: 200ms;
-  background-color: #25b099;
-}
-
-.GENERAL-CHECKBOX-CLASS input,
-.GENERAL-CHECKBOX-CLASS-actived input {
-  cursor: pointer;
-  opacity: 0;
+  display: block;
   position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  z-index: 0;
-}
-
-.GENERAL-CHECKBOX-CLASS label,
-.GENERAL-CHECKBOX-CLASS-actived label {
+  padding-left: 35px;
+  margin-bottom: 12px;
   cursor: pointer;
-  margin: 0;
-  position: absolute;
-}
-
-/* CONTAINER PERSONALIZADO  CHECKBOX */
-
-.GENERAL-CHECKBOX-CLASS-actived {
-  cursor: pointer;
-  transition: 200ms;
-  width: 100%;
-  height: 100%;
+  font-size: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   border-radius: 15px;
+  justify-self: center;
+}
+
+.GENERAL-CHECKBOX-CLASS input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border-radius: 7px;
+  background-color: #eee;
+}
+
+.GENERAL-CHECKBOX-CLASS:hover input~.checkmark {
+  background-color: #ccc;
+}
+
+.GENERAL-CHECKBOX-CLASS input:checked~.checkmark {
   background-color: #25b099;
-  color: #f1f1f1;
-  align-items: center;
-  justify-content: center;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.GENERAL-CHECKBOX-CLASS input:checked~.checkmark:after {
+  display: block;
+}
+
+.GENERAL-CHECKBOX-CLASS .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 @media only screen and (max-width: 1024px) {
   .div-sub-add-new-user-input-area {
     display: flex;
     flex-direction: column;
+  }
+  .div-sub-add-new-user-checkbox-area {
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
   }
 }
 
