--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -52,6 +52,42 @@
   flex-direction: column;
 }
 
+.info-img{
+  position: absolute;
+  width: 20px;
+  transform: translateX(100px);
+}
+.info-check{
+  position: absolute;
+  width: 20px;
+  transform: translateX(220px);
+}
+.info-img:hover~.info-label , 
+.info-check:hover~.info-label{
+  transition: 200ms;
+  opacity: 1;
+  z-index: 1;
+}
+.info-label{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #c1c1c1;
+  font-size: 1em;
+  background-color: #474747;
+  position: absolute;
+  opacity: 0;
+  width: 300px;
+  height: 90px;
+  border-radius: 10px 10px 10px 0px;
+  transform: translateY(-95px);
+  margin-left: 120px;
+  z-index: -999;
+}
+.info-label h5{
+margin: 5% ;
+}
+
 label {
   margin-top: 1em;
   text-align: left;
