--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -60,7 +60,7 @@
 .info-check{
   position: absolute;
   width: 20px;
-  transform: translateX(220px);
+  transform: translateY(-30px) translateX(-32px);
 }
 .info-img:hover~.info-label , 
 .info-check:hover~.info-label{
